--- a/app/src/main/res/layout/activity_tela_agenda.xml
+++ b/app/src/main/res/layout/activity_tela_agenda.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgIrInicio"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -46,19 +46,20 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView11"
         android:layout_width="300dp"
         android:layout_height="150dp"
+        android:layout_marginTop="40dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+
+
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="213dp"
-
-
-        >
+        app:layout_constraintTop_toBottomOf="@+id/textView17">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView3"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_vertical"
@@ -95,11 +96,12 @@
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
         android:layout_height="150dp"
+        android:layout_marginTop="40dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="402dp">
+        app:layout_constraintTop_toBottomOf="@+id/cardView11">
 
         <ImageView
             android:id="@+id/imageView2"
