--- a/app/src/main/res/layout/activity_tela_sintomas.xml
+++ b/app/src/main/res/layout/activity_tela_sintomas.xml
@@ -38,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgIrInicio"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -172,7 +172,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnIrScanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
